docs: Change readme

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "browser_specific_settings": {
       "gecko": {
-          "id": "catppuccin@mozilla.org"
+          "id": "catppuccin@federicoscodelaro.com"
       }
   },
   "manifest_version": 2,
